# gnome-chess

./: Makefile.am  configure.ac
data/: Gnome.Chess.client  Makefile.am  gnome-chess-game-window.ui  gnome-chess-network-window.ui  gnome-chess.ui  new-game-launcher.ui  org.freedesktop.Telepathy.Client.Gnome.Chess.service.in  org.gnome.gnome-chess.gschema.xml.in  preferences.ui
data/icons/: Makefile.am
help/: Makefile.am
help/C/: change-board-orientation.page  change-look-feel.page  change-promotion-type.page  chess-engines.page  index.page  play.page  rules.page  save-resume.page  start-game.page
libgames-contacts/: GamesContacts-1.0.vapi  Makefile.am  games-cell-renderer-expander.c  games-cell-renderer-expander.h  games-cell-renderer-text.c  games-cell-renderer-text.h  games-channel-request-utils.c  games-channel-request-utils.h  games-contact.c  games-contact.h  games-individual-groups.c  games-individual-groups.dtd  games-individual-groups.h  games-individual-manager.c  games-individual-manager.h  games-individual-store-manager.c  games-individual-store-manager.h  games-individual-store.c  games-individual-store.h  games-individual-view.c  games-individual-view.h  games-live-search.c  games-live-search.h  games-ui-utils.c  games-ui-utils.h
po/: tg.po
src/: Makefile.am  chess-game.vala  chess-launcher.vala  chess-pgn.vala  config.vapi  gnome-chess-application.vala  gnome-chess-channel-handler.vala  gnome-chess-handler-application.vala  gnome-chess.vala  test-chess-game.vala
tests/: Makefile.am  accepter.c  offerer.c  test-demo-gdbus-client.vala  test-demo-gdbus-server.vala  test-fetch-contacts.c  test-tube-app.vala
