@YELP_HELP_RULES@
HELP_ID = gnome-chess

HELP_MEDIA = \
	figures/game-3-14.png \
	figures/logo.png \
	figures/logo32.png \
	figures/preferences-appearance-3-14.png \
	figures/preferences-game-3-14.png

HELP_FILES = \
	bug-filing.page \
	change-board-orientation.page \
	change-look-feel.page \
	change-promotion-type.page \
	chess-engines.page \
	develop.page \
	documentation.page \
	index.page \
	legal.xml \
	license.page \
	play.page \
	rules.page \
	save-resume.page \
	shortcuts.page \
	start-game.page \
	translate.page

HELP_LINGUAS =

-include $(top_srcdir)/git.mk
